--- a/index.html
+++ b/index.html
@@ -1,1 +1,250 @@
-<h1> Coming Soon</h1>
+<!DOCTYPE html>
+<html lang="en" class="scroll-smooth">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SwacchBite | Certified Street Food, Trusted Taste</title>
+    <!-- Tailwind CSS Play CDN for modern styling -->
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link rel="stylesheet" href="static/index.css">
+    <script src="static/index.js" defer></script>
+</head>
+<body class="bg-zinc-950 text-zinc-100 font-sans selection:bg-emerald-500/30">
+
+  <!-- Navigation -->
+  <nav class="fixed top-0 w-full z-50 border-b border-white/5 bg-zinc-950/80 backdrop-blur-md transition-all duration-300">
+    <div class="max-w-7xl mx-auto px-6 h-20 flex items-center justify-between">
+      <div class="flex items-center gap-2">
+        <div class="w-8 h-8 bg-emerald-500 rounded-lg flex items-center justify-center shadow-[0_0_20px_rgba(16,185,129,0.3)]">
+          <span class="text-zinc-950 font-bold text-xl">S</span>
+        </div>
+        <span class="text-xl font-bold tracking-tight">SwacchBite</span>
+      </div>
+      <div class="hidden md:flex items-center gap-8">
+        <a href="#home" class="text-sm font-medium text-zinc-400 hover:text-emerald-400 transition-colors">Home</a>
+        <a href="#about" class="text-sm font-medium text-zinc-400 hover:text-emerald-400 transition-colors">About Us</a>
+        <a href="#services" class="text-sm font-medium text-zinc-400 hover:text-emerald-400 transition-colors">Services</a>
+        <a href="#contact" class="px-5 py-2.5 bg-zinc-100 text-zinc-950 rounded-full text-sm font-semibold hover:bg-emerald-400 hover:scale-105 transition-all">Order Now!</a>
+      </div>
+    </div>
+  </nav>
+
+  <main>
+    <!-- Hero Section -->
+    <section id="home" class="relative pt-40 pb-24 px-6 overflow-hidden">
+      <div class="absolute top-0 left-1/2 -translate-x-1/2 w-full h-[600px] bg-emerald-500/10 blur-[120px] rounded-full -z-10"></div>
+      <div class="max-w-7xl mx-auto text-center">
+        <div class="inline-flex items-center gap-2 px-3 py-1 rounded-full border border-emerald-500/20 bg-emerald-500/5 text-emerald-400 text-xs font-semibold mb-8">
+          <span class="relative flex h-2 w-2">
+            <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-emerald-400 opacity-75"></span>
+            <span class="relative inline-flex rounded-full h-2 w-2 bg-emerald-500"></span>
+          </span>
+          Trusted by 500+ Vendors
+        </div>
+        <h1 class="text-5xl md:text-7xl font-bold tracking-tight mb-8 text-balance leading-[1.1]">
+          Certified Street Food,<br/>
+          <span class="text-transparent bg-clip-text bg-gradient-to-r from-emerald-400 via-emerald-200 to-emerald-400 animate-gradient">Trusted Taste.</span>
+        </h1>
+        <p class="max-w-2xl mx-auto text-lg text-zinc-400 leading-relaxed mb-10 text-pretty">
+          Modernizing street food safety through rigorous audits and digital certification. We ensure every bite is as safe as it is delicious.
+        </p>
+        <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
+          <a href="#services" class="w-full sm:w-auto px-8 py-4 bg-emerald-500 text-zinc-950 font-bold rounded-xl hover:scale-105 transition-transform shadow-[0_0_30px_rgba(16,185,129,0.2)]">
+            Explore Services
+          </a>
+          <button id="watch-demo" class="w-full sm:w-auto px-8 py-4 bg-zinc-900 border border-white/10 rounded-xl font-bold flex items-center justify-center gap-2 hover:bg-zinc-800 transition-colors group">
+            <svg class="w-5 h-5 text-emerald-500 group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 20 20"><path d="M10 18a8 8 0 100-16 8 8 0 000 16zM9.555 7.168A1 1 0 008 8v4a1 1 0 001.555.832l3-2a1 1 0 000-1.664l-3-2z"/></svg>
+            About Us
+          </button>
+        </div>
+      </div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="py-24 border-y border-white/5 bg-zinc-950/50">
+      <div class="max-w-7xl mx-auto px-6 grid grid-cols-2 md:grid-cols-4 gap-12">
+        <div class="text-center group">
+          <div class="text-4xl font-bold mb-2 group-hover:text-emerald-400 transition-colors"></div>
+          <div class="text-sm text-zinc-500 uppercase tracking-widest font-semibold">Vendors Certified</div>
+        </div>
+        <div class="text-center group">
+          <div class="text-4xl font-bold mb-2 group-hover:text-emerald-400 transition-colors">99.8%</div>
+          <div class="text-sm text-zinc-500 uppercase tracking-widest font-semibold">Safety Score</div>
+        </div>
+        <div class="text-center group">
+          <div class="text-4xl font-bold mb-2 group-hover:text-emerald-400 transition-colors"></div>
+          <div class="text-sm text-zinc-500 uppercase tracking-widest font-semibold">Verified Reviews</div>
+        </div>
+        <div class="text-center group">
+          <div class="text-4xl font-bold mb-2 group-hover:text-emerald-400 transition-colors">24/7</div>
+          <div class="text-sm text-zinc-500 uppercase tracking-widest font-semibold">Live Monitoring</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="py-32 px-6">
+      <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-20 items-center">
+        <div class="relative">
+          <div class="absolute -top-10 -left-10 w-40 h-40 bg-emerald-500/20 blur-3xl rounded-full"></div>
+          <div class="relative z-10 p-8 rounded-3xl bg-zinc-900 border border-white/10 overflow-hidden">
+            <img src="/placeholder.svg?height=600&width=600" alt="Quality Audit" class="rounded-2xl w-full h-auto object-cover shadow-2xl"/>
+            <div class="absolute top-12 left-12 px-4 py-2 bg-emerald-500 text-zinc-950 font-bold rounded-lg text-sm shadow-xl">
+              Certified Audit Team
+            </div>
+          </div>
+        </div>
+        <div>
+          <h2 class="text-4xl font-bold mb-6 leading-tight">Authenticity Meets <br/><span class="text-emerald-400">Scientific Safety.</span></h2>
+          <p class="text-zinc-400 text-lg mb-8 leading-relaxed">
+            Street food is the heart of culinary culture, but safety shouldn't be a gamble. SwacchBite bridges this gap by providing professional hygiene audits and digital verification.
+          </p>
+          <ul class="space-y-4">
+            <li class="flex items-start gap-3">
+              <div class="mt-1 w-5 h-5 rounded-full bg-emerald-500/20 flex items-center justify-center shrink-0">
+                <svg class="w-3 h-3 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"/></svg>
+              </div>
+              <span class="text-zinc-300">150+ point hygiene safety checklist</span>
+            </li>
+            <li class="flex items-start gap-3">
+              <div class="mt-1 w-5 h-5 rounded-full bg-emerald-500/20 flex items-center justify-center shrink-0">
+                <svg class="w-3 h-3 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"/></svg>
+              </div>
+              <span class="text-zinc-300">ISO-aligned food handling protocols</span>
+            </li>
+            <li class="flex items-start gap-3">
+              <div class="mt-1 w-5 h-5 rounded-full bg-emerald-500/20 flex items-center justify-center shrink-0">
+                <svg class="w-3 h-3 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 13l4 4L19 7"/></svg>
+              </div>
+              <span class="text-zinc-300">QR-code verified customer feedback loop</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="py-32 px-6 bg-zinc-900/30">
+      <div class="max-w-7xl mx-auto">
+        <div class="text-center max-w-3xl mx-auto mb-20">
+          <h2 class="text-4xl font-bold mb-6">Comprehensive Safety Solutions</h2>
+          <p class="text-zinc-400">Everything you need to run a high-standard food business in the modern world.</p>
+        </div>
+        <div class="grid md:grid-cols-3 gap-8">
+          <div class="p-8 rounded-3xl bg-zinc-900 border border-white/5 hover:border-emerald-500/30 transition-all group">
+            <div class="w-14 h-14 bg-emerald-500/10 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+              <svg class="w-7 h-7 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"/></svg>
+            </div>
+            <h3 class="text-xl font-bold mb-4">Hygiene Audits</h3>
+            <p class="text-zinc-500 text-sm leading-relaxed mb-6">Scientific onsite inspections covering water quality, ingredient storage, and preparation methods.</p>
+            <a href="#" class="text-sm font-bold text-emerald-400 flex items-center gap-2 group-hover:gap-3 transition-all">Learn More <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/></svg></a>
+          </div>
+          <div class="p-8 rounded-3xl bg-zinc-900 border border-white/5 hover:border-emerald-500/30 transition-all group">
+            <div class="w-14 h-14 bg-emerald-500/10 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+              <svg class="w-7 h-7 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v1m6 11h2m-6 0h-2v4m0-11v3m0 0h.01M12 12h4.01M16 20h4M4 12h4m12 0h.01M5 8h2a1 1 0 001-1V5a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1zm12 0h2a1 1 0 001-1V5a1 1 0 00-1-1h-2a1 1 0 00-1 1v2a1 1 0 001 1zM5 20h2a1 1 0 001-1v-2a1 1 0 00-1-1H5a1 1 0 00-1 1v2a1 1 0 001 1z"/></svg>
+            </div>
+            <h3 class="text-xl font-bold mb-4">Digital Verification</h3>
+            <p class="text-zinc-500 text-sm leading-relaxed mb-6">Real-time QR certification allowing customers to verify safety scores and audit history instantly.</p>
+            <a href="#" class="text-sm font-bold text-emerald-400 flex items-center gap-2 group-hover:gap-3 transition-all">Learn More <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/></svg></a>
+          </div>
+          <div class="p-8 rounded-3xl bg-zinc-900 border border-white/5 hover:border-emerald-500/30 transition-all group">
+            <div class="w-14 h-14 bg-emerald-500/10 rounded-2xl flex items-center justify-center mb-6 group-hover:scale-110 transition-transform">
+              <svg class="w-7 h-7 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z"/></svg>
+            </div>
+            <h3 class="text-xl font-bold mb-4">Training & Education</h3>
+            <p class="text-zinc-500 text-sm leading-relaxed mb-6">Workshops for vendors on modern food safety techniques and sustainable business practices.</p>
+            <a href="#" class="text-sm font-bold text-emerald-400 flex items-center gap-2 group-hover:gap-3 transition-all">Learn More <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/></svg></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA Section -->
+    <section id="contact" class="py-32 px-6">
+      <div class="max-w-7xl mx-auto rounded-[3rem] bg-emerald-500 p-12 md:p-24 relative overflow-hidden">
+        <div class="absolute inset-0 bg-[radial-gradient(circle_at_top_right,_var(--tw-gradient-stops))] from-white/20 via-transparent to-transparent"></div>
+        <div class="relative z-10 grid md:grid-cols-2 items-center gap-12">
+          <div class="text-zinc-950">
+            <h2 class="text-4xl md:text-5xl font-bold mb-6 leading-tight">Ready to boost your business credibility?</h2>
+            <p class="text-zinc-900/80 text-lg mb-8">Join the network of certified vendors and gain customer trust instantly.</p>
+            <div class="flex flex-col sm:flex-row gap-4">
+              <button class="px-8 py-4 bg-zinc-950 text-white font-bold rounded-xl hover:scale-105 transition-transform">Apply for Certification</button>
+              <button class="px-8 py-4 border-2 border-zinc-950/20 text-zinc-950 font-bold rounded-xl hover:bg-zinc-950/5 transition-colors">Contact Support</button>
+            </div>
+          </div>
+          <div class="hidden md:block">
+             <div class="p-8 bg-zinc-950 rounded-3xl shadow-2xl rotate-3">
+               <div class="flex items-center gap-4 mb-6">
+                 <div class="w-12 h-12 bg-emerald-500 rounded-full flex items-center justify-center">
+                   <svg class="w-6 h-6 text-zinc-950" fill="currentColor" viewBox="0 0 20 20"><path d="M9 2a1 1 0 000 2h2a1 1 0 100-2H9z"/><path fill-rule="evenodd" d="M4 5a2 2 0 012-2 3 3 0 003 3h2a3 3 0 003-3 2 2 0 012 2v11a2 2 0 01-2 2H6a2 2 0 01-2-2V5zm3 4a1 1 0 000 2h.01a1 1 0 100-2H7zm3 0a1 1 0 000 2h3a1 1 0 100-2h-3zm-3 4a1 1 0 100 2h.01a1 1 0 100-2H7zm3 0a1 1 0 100 2h3a1 1 0 100-2h-3z" clip-rule="evenodd"/></svg>
+                 </div>
+                 <div>
+                   <div class="text-xs text-emerald-400 font-bold uppercase">Certificate ID</div>
+                   <div class="text-white font-bold">SB-2026-X88</div>
+                 </div>
+               </div>
+               <div class="space-y-3 mb-6">
+                 <div class="h-2 w-full bg-zinc-800 rounded"></div>
+                 <div class="h-2 w-3/4 bg-zinc-800 rounded"></div>
+                 <div class="h-2 w-1/2 bg-zinc-800 rounded"></div>
+               </div>
+               <div class="flex justify-between items-center pt-4 border-t border-white/5">
+                 <span class="text-xs text-zinc-500">Verified Jan 2026</span>
+                 <span class="text-emerald-500 font-bold">100% Secure</span>
+               </div>
+             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="pt-24 pb-12 border-t border-white/5 bg-zinc-950">
+    <div class="max-w-7xl mx-auto px-6">
+      <div class="grid md:grid-cols-4 gap-12 mb-20">
+        <div class="col-span-2">
+          <div class="flex items-center gap-2 mb-6">
+            <div class="w-6 h-6 bg-emerald-500 rounded flex items-center justify-center">
+              <span class="text-zinc-950 font-bold text-xs">S</span>
+            </div>
+            <span class="text-lg font-bold tracking-tight">SwacchBite</span>
+          </div>
+          <p class="text-zinc-500 max-w-sm mb-6">
+            Bridging the gap between authenticity and safety. We are the trusted partner for street food lovers and vendors alike.
+          </p>
+          <div class="flex gap-4">
+            <a href="#" class="w-10 h-10 rounded-full bg-zinc-900 border border-white/5 flex items-center justify-center hover:bg-emerald-500 hover:text-zinc-950 transition-all"><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg></a>
+            <a href="#" class="w-10 h-10 rounded-full bg-zinc-900 border border-white/5 flex items-center justify-center hover:bg-emerald-500 hover:text-zinc-950 transition-all"><svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.336 3.608 1.31.974.974 1.248 2.242 1.31 3.608.058 1.266.07 1.646.07 4.85s-.012 3.584-.07 4.85c-.062 1.366-.336 2.633-1.31 3.608-.974.974-2.242 1.248-3.608 1.31-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.336-3.608-1.31-.974-.974-1.248-2.242-1.31-3.608-.058-1.266-.07-1.646-.07-4.85s.012-3.584.07-4.85c.062-1.366.336-2.633 1.31-3.608.974-.974 2.242-1.248 3.608-1.31 1.266-.058 1.646-.07 4.85-.07zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948s.014 3.667.072 4.947c.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.073 4.948.073s3.667-.014 4.947-.072c4.358-.2 6.78-2.618 6.98-6.98.058-1.281.072-1.689.072-4.948s-.014-3.667-.072-4.947c-.2-4.358-2.618-6.78-6.98-6.98-1.281-.058-1.689-.072-4.948-.072zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.162 6.162 6.162 6.162-2.759 6.162-6.162-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/></svg></a>
+          </div>
+        </div>
+        <div>
+          <h4 class="font-bold mb-6">Services</h4>
+          <ul class="space-y-4 text-sm text-zinc-500">
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Hygiene Audits</a></li>
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Safety Training</a></li>
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Digital ID</a></li>
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Consultancy</a></li>
+          </ul>
+        </div>
+        <div>
+          <h4 class="font-bold mb-6">Company</h4>
+          <ul class="space-y-4 text-sm text-zinc-500">
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">About Us</a></li>
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Contact</a></li>
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Privacy Policy</a></li>
+            <li><a href="#" class="hover:text-emerald-400 transition-colors">Terms</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="pt-8 border-t border-white/5 flex flex-col md:flex-row justify-between gap-6">
+        <p class="text-xs text-zinc-600">© 2026 SwacchBite Certification Systems. All rights reserved.</p>
+        <div class="flex gap-6">
+          <p class="text-xs text-zinc-700 uppercase tracking-tighter">Designed for Safety</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
+
